--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,15 +20,6 @@
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:text="BG Reading"
-        android:textSize="25pt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/bgreading" />
-
-    <TextView
         android:text="Disconnected"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
@@ -44,6 +35,16 @@
         android:labelFor="@+id/connection_state"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/connection_state" />
+
+    <TextView
+        android:text="BG Reading"
+        android:textSize="16pt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/bgreading"
+        android:layout_below="@+id/connection_state"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
