--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent">
 
     <TextView
-        android:text="BG Meter MAC"
+        android:text="@string/label_device_address"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:id="@+id/bgmac" />
@@ -20,7 +20,7 @@
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:text="Disconnected"
+        android:text="@string/disconnected"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:id="@+id/connection_state"
@@ -28,7 +28,7 @@
         android:layout_alignParentEnd="true" />
 
     <TextView
-        android:text="Connection Status:"
+        android:text="@string/label_state"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:id="@+id/connectionstatus_label"
@@ -45,6 +45,5 @@
         android:layout_below="@+id/connection_state"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
-
 
 </RelativeLayout>
